# gaze-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
src/: lib.rs
src/gaze_rs/: __init__.py  new_torch_retinaface.py  retinaface.py  torch_retinaface.py  utils.py
tests-local/: resnet_retinaface.ipynb  scratchpad.ipynb
