[project]
name = "gaze-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Onésime BERNARD", email = "bernard.onesime@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.93",
    "matplotlib>=3.10.1",
    "retina-face>=0.0.17",
    "tf-keras>=2.19.0",
    "torch>=2.8.0.dev20250507",
    "torchaudio>=2.6.0.dev20250507",
    "torchvision>=0.22.0.dev20250507",
]

[project.scripts]
gaze-rs = "gaze_rs:main"

[tool.maturin]
module-name = "gaze_rs._core"
python-packages = ["gaze_rs"]
python-source = "src"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[tool.uv.sources]
torch = {index = "pytorch-cpu"}
torchaudio = {index = "pytorch-cpu"}
torchvision = {index = "pytorch-cpu"}

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pyright>=1.1.400",
    "ruff>=0.11.8",
    "tqdm>=4.67.1",
    "wat-inspector>=0.4.3",
]
